--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
+    "react-icon-cloud": "^4.1.4",
     "sugar-high": "^0.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
