--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.2.1",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
     "@upstash/claps": "1.0.0-beta.4",
@@ -28,9 +29,11 @@
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-icon-cloud": "^4.1.4",
+    "shadcn-ui": "^0.8.0",
     "sugar-high": "^0.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.164.1"
+    "three": "^0.164.1",
+    "toast": "^0.5.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.12",
